--- a/Python基礎.ipynb
+++ b/Python基礎.ipynb
@@ -2,14 +2,15 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [
         {
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "侍一郎\n"
+            "侍太郎\n",
+            "['侍太郎', '侍一郎', '侍二郎', '侍三郎', '侍四郎']\n"
           ]
         }
       ],
@@ -17,7 +18,196 @@
         "user_names = [\"侍太郎\", \"侍一郎\", \"侍二郎\", \"侍三郎\", \"侍四郎\"]\n",
         "\n",
         "# 2番目の要素である「侍一郎」という文字列だけを取り出して表示する\n",
-        "print(user_names[1])"
+        "print(user_names[0])\n",
+        "print(user_names)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['侍太郎', '侍花子', '侍二郎', '侍三郎', '侍四郎']\n"
+          ]
+        }
+      ],
+      "source": [
+        "user_names = [\"侍太郎\", \"侍一郎\", \"侍二郎\", \"侍三郎\", \"侍四郎\"]\n",
+        "\n",
+        "# 2番目の要素を更新する。\n",
+        "user_names[1] = \"侍花子\"\n",
+        "print(user_names)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "['侍太郎', '侍一郎', '侍二郎', '侍三郎', '侍四郎', '侍五郎']\n",
+            "['侍太郎', '侍一郎', '侍三郎', '侍四郎', '侍五郎']\n"
+          ]
+        }
+      ],
+      "source": [
+        "user_names = [\"侍太郎\", \"侍一郎\", \"侍二郎\", \"侍三郎\", \"侍四郎\"]\n",
+        "\n",
+        "# 6番目の要素を追加する\n",
+        "user_names.append(\"侍五郎\")\n",
+        "print(user_names)\n",
+        "\n",
+        "# 3番目の要素を削除する\n",
+        "user_names.pop(2)\n",
+        "print(user_names)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "イギリス\n",
+            "('日本', 'アメリカ', 'イギリス', 'フランス')\n"
+          ]
+        }
+      ],
+      "source": [
+        "country_names = (\"日本\", \"アメリカ\", \"イギリス\", \"フランス\")\n",
+        "\n",
+        "#　3番目の要素を取り出す\n",
+        "print(country_names[2])\n",
+        "\n",
+        "#　全ての要素を取り出す\n",
+        "print(country_names)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 8,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{2, 3, 5, 7}\n"
+          ]
+        }
+      ],
+      "source": [
+        "#　1~10までに含まれる素数のセット\n",
+        "prime_numbers = {2, 3, 5, 7}\n",
+        "\n",
+        "#　セット全体を表示\n",
+        "print(prime_numbers)\n",
+        "\n",
+        "#　セットの3番目の要素を表示\n",
+        "#  print(prime_numbers[2])\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 10,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{2, 3, 5, 7, 11}\n",
+            "{2, 5, 7, 11}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# 1～10までに含まれる素数のセット\n",
+        "prime_numbers = {2, 3, 5, 7}\n",
+        "\n",
+        "prime_numbers.add(11)\n",
+        "print(prime_numbers)\n",
+        "\n",
+        "prime_numbers.remove(3)\n",
+        "print(prime_numbers)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 11,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "{'イギリス', '日本', 'フランス', 'アメリカ'}\n",
+            "{'イギリス', '日本', 'ドイツ', 'アメリカ', 'フランス'}\n",
+            "{'日本', 'ドイツ', 'アメリカ', 'フランス'}\n"
+          ]
+        }
+      ],
+      "source": [
+        "country_names = {\"アメリカ\", \"イギリス\", \"日本\", \"フランス\"}\n",
+        "\n",
+        "print(country_names)\n",
+        "\n",
+        "country_names.add(\"ドイツ\")\n",
+        "print(country_names)\n",
+        "\n",
+        "country_names.remove(\"イギリス\")\n",
+        "print(country_names)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 15,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "侍太郎\n",
+            "{'name': '侍太郎', 'age': 36, 'gender': '男性'}\n",
+            "{'name': '侍太郎', 'age': 37, 'gender': '男性', 'address': '東京都'}\n",
+            "{'name': '侍太郎', 'age': 37, 'gender': '男性'}\n"
+          ]
+        }
+      ],
+      "source": [
+        "# 連想配列を作成\n",
+        "personal_data = {\"name\": \"侍太郎\", \"age\": 36, \"gender\": \"男性\"}\n",
+        "\n",
+        "# キー「name」の値を表示\n",
+        "print(personal_data[\"name\"])\n",
+        "\n",
+        "# 連想配列全体を表示\n",
+        "print(personal_data)\n",
+        "\n",
+        "# キー「age」の値を更新\n",
+        "personal_data[\"age\"] = 37\n",
+        "\n",
+        "# 新しく要素（キーと値）を追加\n",
+        "personal_data[\"address\"] = \"東京都\"\n",
+        "\n",
+        "# 連想配列全体を表示\n",
+        "print(personal_data)\n",
+        "\n",
+        "personal_data.pop(\"address\")\n",
+        "\n",
+        "# 連想配列全体を表示\n",
+        "print(personal_data)\n"
       ]
     }
   ],
