課題008を追加

--- a/Python基礎.ipynb
+++ b/Python基礎.ipynb
@@ -209,6 +209,267 @@
         "# 連想配列全体を表示\n",
         "print(personal_data)\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 1,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "水曜日は晴れです\n",
+            "晴れ\n",
+            "水曜日は晴れです\n"
+          ]
+        }
+      ],
+      "source": [
+        "list = [\n",
+        "\"月曜日は晴れです\",\n",
+        "\"火曜日は雨です\",\n",
+        "\"水曜日は晴れです\",\n",
+        "\"木曜日は晴れです\",\n",
+        "\"金曜日は曇りです\",\n",
+        "\"土曜日は曇りのち雨です\",\n",
+        "\"日曜日は雷雨です\"]\n",
+        "\n",
+        "dictionary = {\n",
+        "\"mon\":\"晴れ\",\n",
+        "\"tue\":\"雨\",\n",
+        "\"wed\":\"晴れ\",\n",
+        "\"thu\":\"晴れ\",\n",
+        "\"fri\":\"曇り\",\n",
+        "\"sat\":\"曇りのち雨\",\n",
+        "\"sun\":\"雷雨\",\n",
+        "}\n",
+        "\n",
+        "print(list[2])\n",
+        "print(dictionary[\"wed\"])\n",
+        "tenki = dictionary[\"wed\"]\n",
+        "print(f\"水曜日は{tenki}です\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 2,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "63\n",
+            "True\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(45 + 18)\n",
+        "print(45 > 18)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "False\n"
+          ]
+        }
+      ],
+      "source": [
+        "print(\"5\" == 5)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 4,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "num1とnum2は等しいです\n"
+          ]
+        }
+      ],
+      "source": [
+        "num1 = 5\n",
+        "num2 = \"5\"\n",
+        "\n",
+        "if num1 == int(num2):\n",
+        "    print(\"num1とnum2は等しいです\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "4\n",
+            "大当たりです\n"
+          ]
+        }
+      ],
+      "source": [
+        "# ランダムな整数を利用するために、randomモジュールをインポート\n",
+        "import random\n",
+        "\n",
+        "#　変数numに0~4までのランダムな整数を代入する\n",
+        "num = random.randint(0, 4)\n",
+        "\n",
+        "# 変数numの値を出力\n",
+        "print(num)\n",
+        "\n",
+        "# 変数numの値が4であれば、「大当たりです」という文字列を出力する\n",
+        "if num == 4:\n",
+        "    print(\"大当たりです\")\n",
+        "    "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 36,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "4\n",
+            "大当たりです\n"
+          ]
+        }
+      ],
+      "source": [
+        "# ランダムな整数を利用するために、randomモジュールをインポート\n",
+        "import random\n",
+        "\n",
+        "#　変数numに0~4までのランダムな整数を代入する\n",
+        "num = random.randint(0, 4)\n",
+        "\n",
+        "# 変数numの値を出力\n",
+        "print(num)\n",
+        "\n",
+        "# 変数numの値が4なら「大当たりです」、それ以外なら「はずれです」と出力する\n",
+        "if num == 4:\n",
+        "    print(\"大当たりです\")\n",
+        "else:\n",
+        "    print(\"はずれです\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 47,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "はずれです\n"
+          ]
+        }
+      ],
+      "source": [
+        "# ランダムな整数を利用するために、randomモジュールをインポート\n",
+        "import random\n",
+        "\n",
+        "#　変数numに0~4までのランダムな整数を代入する\n",
+        "num = random.randint(0, 4)\n",
+        "\n",
+        "# 変数numの値を出力\n",
+        "print(num)\n",
+        "\n",
+        "# 変数numの値が4なら「大当たりです」、3なら「当たりです」、それ以外なら「はずれです」と出力する\n",
+        "if num == 4:\n",
+        "    print(\"大当たりです\")\n",
+        "elif num == 3:\n",
+        "    print(\"当たりです\")\n",
+        "else:\n",
+        "    print(\"はずれです\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 52,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "0\n",
+            "and条件が成り立ちませんでした\n",
+            "or条件が成り立ちませんでした\n"
+          ]
+        }
+      ],
+      "source": [
+        "#ランダムな整数を利用するために、randomモジュールをインポート\n",
+        "import random\n",
+        "\n",
+        "# 変数numに0～4までのランダムな整数を代入する\n",
+        "num = random.randint(0, 4)\n",
+        "\n",
+        "# 変数numの値を出力\n",
+        "print(num)\n",
+        "\n",
+        "# すべての条件が成り立つ場合にのみ処理を行う（変数numの値が2）\n",
+        "if 1 < num and num <3:\n",
+        "    print(\"変数numは1より大きく、3より小さいです\")\n",
+        "else:\n",
+        "    print(\"and条件が成り立ちませんでした\")\n",
+        "\n",
+        "# 1つでも条件が成り立てば処理を行う（変数numの値が1または3）\n",
+        "if num == 1 or num == 3:\n",
+        "    print(\"変数numは1または3です\")\n",
+        "else:\n",
+        "    print(\"or条件が成り立ちませんでした\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 78,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2\n",
+            "変数numは1以上、3以下です\n"
+          ]
+        }
+      ],
+      "source": [
+        "# ランダムな整数を利用するために、randomモジュールをインポート\n",
+        "import random\n",
+        "\n",
+        "# 変数numに0～4までのランダムな整数を代入する\n",
+        "num = random.randint(0, 4)\n",
+        "\n",
+        "# 変数numの値を出力\n",
+        "print(num)\n",
+        "\n",
+        "# すべての条件が成り立つ場合にのみ処理を行う（変数numの値が2）\n",
+        "if 1 <= num <=3:\n",
+        "    print(\"変数numは1以上、3以下です\")\n",
+        "else:\n",
+        "    print(\"and条件が成り立ちませんでした\")"
+      ]
     }
   ],
   "metadata": {
