--- a/Python基礎.ipynb
+++ b/Python基礎.ipynb
@@ -470,6 +470,406 @@
         "else:\n",
         "    print(\"and条件が成り立ちませんでした\")"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# ランダムな整数を利用するために、randomモジュールをインポート\n",
+        "import random\n",
+        "\n",
+        "# 変数numに0～30までのランダムな整数を代入する\n",
+        "num = random.randint(0, 30)\n",
+        "print(num)\n",
+        "\n",
+        "if num % 3 == 0 and num % 5 == 0:\n",
+        "    print(\"FizzBuzz\")\n",
+        "elif num % 3 == 0:\n",
+        "    print(\"Fizz\")\n",
+        "elif num % 5 == 0:\n",
+        "    print(\"Buzz\")\n",
+        "else:\n",
+        "    print(\"var\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 3,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1\n",
+            "2\n",
+            "3\n",
+            "4\n",
+            "5\n"
+          ]
+        }
+      ],
+      "source": [
+        "for i in range(1, 11):\n",
+        "    print(i)\n",
+        "\n",
+        "# ループ変数の値が5であれば、break文で繰り返し処理を強制終了する\n",
+        "    if i == 5:\n",
+        "        break"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1回目の結果は12です。\n",
+            "2回目の結果は15です。\n",
+            "3回目の結果は7です。\n",
+            "4回目の結果は17です。\n",
+            "5回目の結果は17です。\n",
+            "6回目の結果は20です。\n",
+            "20が出たので繰り返し処理を強制終了します。\n"
+          ]
+        }
+      ],
+      "source": [
+        "#ランダムな整数を利用するため、記述が必要です。\n",
+        "import random\n",
+        "\n",
+        "for i in range(1, 11):\n",
+        "    num = random.randint(1, 20)\n",
+        "    print(f\"{i}回目の結果は{num}です。\")\n",
+        "\n",
+        "    if num == 20:\n",
+        "        print(\"20が出たので繰り返し処理を強制終了します。\")\n",
+        "        break"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "2\n",
+            "4\n",
+            "6\n",
+            "8\n",
+            "10\n"
+          ]
+        }
+      ],
+      "source": [
+        "for i in range(1, 11):\n",
+        "    if i % 2 == 1:\n",
+        "        continue\n",
+        "\n",
+        "    print(i)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 17,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "最初の値は3です。\n",
+            "現在の値は1です。\n",
+            "現在の値は0です。\n"
+          ]
+        }
+      ],
+      "source": [
+        "#ランダムな整数を利用するため、記述が必要です。\n",
+        "import random\n",
+        "\n",
+        "# 変数numに0~4までのランダムな整数を代入する\n",
+        "num = random.randint(0, 4)\n",
+        "\n",
+        "# 変数numの最初の値を出力する（確認用）\n",
+        "print(f\"最初の値は{num}です。\")\n",
+        "\n",
+        "# 変数numの値が0以外である間、変数numの値を出力し続ける\n",
+        "while num != 0:\n",
+        "    # 変数numに0~4までのランダムな整数を代入する\n",
+        "    num = random.randint(0, 4)\n",
+        "    # 次の条件で比較される、変数numの現在の値を出力する\n",
+        "    print(f\"現在の値は{num}です。\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 21,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "最初の値は4です。\n",
+            "現在の値は3です。\n",
+            "現在の値は0です。\n"
+          ]
+        }
+      ],
+      "source": [
+        "#ランダムな整数を利用するため、記述が必要です。\n",
+        "import random\n",
+        "\n",
+        "# 変数numに0~4までのランダムな整数を代入する\n",
+        "num = random.randint(0, 4)\n",
+        "\n",
+        "# カウンタ変数を用意する\n",
+        "i = 1\n",
+        "\n",
+        "# 変数numの最初の値を出力する（確認用）\n",
+        "print(f\"最初の値は{num}です。\")\n",
+        "\n",
+        "# 変数numの値が0以外である間、変数numの値を出力し続ける\n",
+        "while num != 0:\n",
+        "    # 変数numに0~4までのランダムな整数を代入する\n",
+        "    num = random.randint(0, 4)\n",
+        "\n",
+        "    # カウンタ変数iの値が5であれば、break文で繰り返し処理を強制終了する\n",
+        "    if i == 5:\n",
+        "        print(\"5回目なので繰り返し処理を強制終了します。\")\n",
+        "        break\n",
+        "\n",
+        "    # 次の条件で比較される、変数numの現在の値を出力する\n",
+        "    print(f\"現在の値は{num}です。\")\n",
+        "    # カウンタ変数の値を1増やす\n",
+        "    i = i + 1"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import random\n",
+        "sum = 0\n",
+        "\n",
+        "while sum < 20:\n",
+        "    num = random.randint(1, 10)\n",
+        "    print(f\"{num}が出ました。\")\n",
+        "\n",
+        "# 変数numの値が偶数（2で割った余りが0）であれば、加算せずにcontinue文で次のループに進む\n",
+        "    if num % 2 == 0:\n",
+        "        print(\"偶数なので加算しません。\")\n",
+        "        continue\n",
+        "\n",
+        "    # 変数sumに変数numの値を加算する\n",
+        "    sum = sum + num\n",
+        "    print(f\"現在の合計は{sum}です。\")\n",
+        "    "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "user_names = [\"侍太郎\", \"侍一郎\", \"侍二郎\", \"侍三郎\", \"侍四郎\"]\n",
+        "\n",
+        "# 配列user_namesの要素を１つずつ順番に出力する\n",
+        "for user_name in user_names:\n",
+        "    print(user_name)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "personal_data = {\"name\": \"侍太郎\", \"age\": 36, \"gender\": \"男性\"}\n",
+        "\n",
+        "# 連想配列personal_dataのキーと値を1つずつ順番に出力する\n",
+        "for key, value in personal_data.items():\n",
+        "    print(f\"{key}は{value}です。\")\n",
+        "\n",
+        "# 連想配列personal_dataの値を1つずつ順番に出力する\n",
+        "for value in personal_data.values():\n",
+        "    print(value)\n",
+        "    \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "user_names = [\"侍太郎\", \"侍一郎\", \"侍二郎\", \"侍三郎\", \"侍四郎\"]\n",
+        "\n",
+        "# 配列user_namesのインデックスと値を1つずつ順番に出力する\n",
+        "for index, value in enumerate(user_names):\n",
+        "    print(f\"{index} : {value}\")\n",
+        "    "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "user_names = [\"侍太郎\", \"侍一郎\", \"侍二郎\", \"侍三郎\", \"侍四郎\"]\n",
+        "\n",
+        "# 検索したいユーザー名を代入する変数\n",
+        "target = \"侍二郎\"\n",
+        "\n",
+        "for user_name in user_names:\n",
+        "    print(user_name)\n",
+        "    \n",
+        "    # 変数user_nameと変数targetの値が一致すれば、break文で繰り返し処理を強制終了する\n",
+        "    if (user_name == target):\n",
+        "        print(f\"{target}さんが見つかったので、繰り返し処理を強制終了します。\")\n",
+        "        break"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "score = {\n",
+        "    \"国語\": 80,\n",
+        "    \"数学\": 55,\n",
+        "    \"理科\": 70,\n",
+        "    \"社会\": 85,\n",
+        "    \"英語\": 60\n",
+        "}\n",
+        "\n",
+        "print(\"合格した科目は以下のとおりです。\")\n",
+        "\n",
+        "for key, value in score.items():\n",
+        "    # 変数valueの値（点数）が70より小さければ、キー（科目名）と値（点数）を出力せずにcontinue文で次のループに進む\n",
+        "    if (value < 70):\n",
+        "        continue\n",
+        "    print(f\"{key} : {value}点\")\n",
+        "    "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "list = [\"水\",\"金\",\"地\",\"火\",\"木\",\"土\",\"天\",\"海\",\"冥\"]\n",
+        "\n",
+        "for index, value in enumerate(list):\n",
+        "    print(f\"{index + 1} : {value}\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 9,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "1 : 水\n",
+            "2 : 金\n",
+            "3 : 地\n",
+            "4 : 火\n",
+            "5 : 木\n",
+            "6 : 土\n",
+            "7 : 天\n",
+            "8 : 海\n",
+            "9 : 冥\n",
+            "10\n"
+          ]
+        }
+      ],
+      "source": [
+        "list = [\"水\",\"金\",\"地\",\"火\",\"木\",\"土\",\"天\",\"海\",\"冥\"]\n",
+        "\n",
+        "num = 1\n",
+        "\n",
+        "for value in list:\n",
+        "    print(f\"{num} : {value}\")\n",
+        "    num = num + 1\n",
+        "    if (value == \"冥\"):\n",
+        "        print(num)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "list = [\"水\",\"金\",\"地\",\"火\",\"木\",\"土\",\"天\",\"海\",\"冥\"]\n",
+        "\n",
+        "# インデックス用の変数を設定\n",
+        "num = 1\n",
+        "\n",
+        "for value in list:\n",
+        "    print(f\"{num}  {value}\")\n",
+        "    # インデックスを1つずつ加算する\n",
+        "    num = num + 1\n",
+        "\n",
+        "#最後は必ず次のインデックスを表示して終了とする\n",
+        "print(num)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "list = [\"水\",\"金\",\"地\",\"火\",\"木\",\"土\",\"天\",\"海\",\"冥\"]\n",
+        "\n",
+        "# range関数とlen関数を組みあわせて、listの長さ9(0～8)までを繰り返し処理する\n",
+        "for i in range(len(list)):\n",
+        "    # インデックスは1から始めたいので、＋１をする\n",
+        "    print(i + 1, list[i])\n",
+        "    \n",
+        "#最後は必ず次のインデックスを表示して終了とする\n",
+        "print(len(list) + 1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "list = [\"水\",\"金\",\"地\",\"火\",\"木\",\"土\",\"天\",\"海\",\"冥\"]\n",
+        "\n",
+        "# カウント用の変数を設定して、初期値を0にする\n",
+        "i = 0\n",
+        "\n",
+        "# カウント用変数が、listの長さである9になるまでの間繰り返し処理する\n",
+        "while i < len(list):\n",
+        "    # インデックスは1から始めたいので、＋１をする\n",
+        "    print(i + 1, list[i])\n",
+        "    i = i + 1\n",
+        "\n",
+        "#最後は必ず次のインデックスを表示して終了とする\n",
+        "print(len(list) + 1)"
+      ]
     }
   ],
   "metadata": {
