--- a/Python基礎.ipynb
+++ b/Python基礎.ipynb
@@ -781,26 +781,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "1 : 水\n",
-            "2 : 金\n",
-            "3 : 地\n",
-            "4 : 火\n",
-            "5 : 木\n",
-            "6 : 土\n",
-            "7 : 天\n",
-            "8 : 海\n",
-            "9 : 冥\n",
-            "10\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "list = [\"水\",\"金\",\"地\",\"火\",\"木\",\"土\",\"天\",\"海\",\"冥\"]\n",
         "\n",
@@ -869,6 +852,138 @@
         "\n",
         "#最後は必ず次のインデックスを表示して終了とする\n",
         "print(len(list) + 1)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# 朝のあいさつを出力する関数を作成する\n",
+        "def say_good_morning():\n",
+        "    print(\"おはようございます！\")\n",
+        "    print(\"昨日はよく眠れましたか？\")\n",
+        "    print(\"今日も一日頑張りましょう！\")\n",
+        "\n",
+        "# 夜のあいさつを出力する関数を作成する\n",
+        "def say_good_evening():\n",
+        "    print(\"こんばんは！\")\n",
+        "    print(\"今日も一日お疲れさまでした。\")\n",
+        "\n",
+        "# 朝のあいさつを出力する関数を呼び出す\n",
+        "say_good_morning()\n",
+        "\n",
+        "# 夜のあいさつを出力する関数を呼び出す\n",
+        "say_good_evening()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# 与えられた引数$priceに送料を加算し、その値を出力する関数を定義する\n",
+        "def calculate_total(price):\n",
+        "    # 与えられた引数priceに送料を加算し、変数totalに代入する\n",
+        "    total = price + 500\n",
+        "\n",
+        "    # 変数totalの値を出力する\n",
+        "    print(f\"{total}円\")\n",
+        "\n",
+        "# 関数を呼び出し、引数として購入金額を渡す\n",
+        "calculate_total(1200)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def add_two_arguments(price, shipping_fee):\n",
+        "    # 与えられた引数priceと引数shipping_feeを加算し、変数totalに代入する\n",
+        "    total = price + shipping_fee\n",
+        "\n",
+        "    # 変数$totalの値を出力する\n",
+        "    print(f\"{total}円\")\n",
+        "\n",
+        "add_two_arguments(1200, 500)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# 購入済みかどうかを判定する変数\n",
+        "purchased = True\n",
+        "\n",
+        "# 戻り値を返す関数を定義する\n",
+        "def is_purchased():\n",
+        "    if (purchased):\n",
+        "        return True\n",
+        "    else:\n",
+        "        return False\n",
+        "\n",
+        "# 戻り値を返す関数を条件式に使う（Trueであれば処理が実行される）\n",
+        "if (is_purchased()):\n",
+        "    print(\"商品は購入済みです。\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 18,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "4"
+            ]
+          },
+          "execution_count": 18,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "def double(num: int) -> int:\n",
+        "    return num * 2\n",
+        "\n",
+        "double(2)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 25,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "税込 1100.0円になります。\n"
+          ]
+        }
+      ],
+      "source": [
+        "# 商品を購入して、消費税を加えた計算結果を返す関数を記述してください。\n",
+        "# 第1引数に商品の金額、第2引数に消費税（10%）を設定できるようにしてください。\n",
+        "\n",
+        "def calculate_total_price(price, tax_rate):\n",
+        "    total_price = price + (price * tax_rate)\n",
+        "    return total_price\n",
+        "\n",
+        "def display_total_price(total_price):\n",
+        "    print(f\"税込 {total_price}円になります。\")\n",
+        "\n",
+        "price = 1000\n",
+        "tax_rate = 0.1\n",
+        "total_price = calculate_total_price(price, tax_rate)\n",
+        "display_total_price(total_price)"
       ]
     }
   ],
