課題13修正をupload

--- a/kadai-013/Python基礎_013.ipynb
+++ b/kadai-013/Python基礎_013.ipynb
@@ -17,16 +17,22 @@
         "# 商品を購入して、消費税を加えた計算結果を返す関数を記述してください。\n",
         "# 第1引数に商品の金額、第2引数に消費税（10%）を設定できるようにしてください。\n",
         "\n",
+        "# 商品代金priceと税率tax_rateを受け取って、税込金額を計算する\n",
         "def calculate_total_price(price, tax_rate):\n",
         "    total_price = price + (price * tax_rate)\n",
         "    return total_price\n",
         "\n",
+        "# 税込金額を丁寧に表示するための関数\n",
         "def display_total_price(total_price):\n",
         "    print(f\"税込 {total_price}円になります。\")\n",
         "\n",
+        "# 商品価格をセット\n",
         "price = 1000\n",
+        "# 税率をセット\n",
         "tax_rate = 0.1\n",
+        "# 関数に商品代金と税率を渡して、結果をtotal_priceへ格納\n",
         "total_price = calculate_total_price(price, tax_rate)\n",
+        "# total_priceに戻ってきた税込金額を表示用の関数へ渡して、その結果を表示する\n",
         "display_total_price(total_price)"
       ]
     }
