--- a/Python基礎.ipynb
+++ b/Python基礎.ipynb
@@ -958,7 +958,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": 26,
       "metadata": {},
       "outputs": [
         {
@@ -973,18 +973,156 @@
         "# 商品を購入して、消費税を加えた計算結果を返す関数を記述してください。\n",
         "# 第1引数に商品の金額、第2引数に消費税（10%）を設定できるようにしてください。\n",
         "\n",
+        "# 商品代金priceと税率tax_rateを受け取って、税込金額を計算する\n",
         "def calculate_total_price(price, tax_rate):\n",
         "    total_price = price + (price * tax_rate)\n",
         "    return total_price\n",
         "\n",
+        "# 税込金額を丁寧に表示するための関数\n",
         "def display_total_price(total_price):\n",
         "    print(f\"税込 {total_price}円になります。\")\n",
         "\n",
+        "# 商品価格をセット\n",
         "price = 1000\n",
+        "# 税率をセット\n",
         "tax_rate = 0.1\n",
+        "# 関数に商品代金と税率を渡して、結果をtotal_priceへ格納\n",
         "total_price = calculate_total_price(price, tax_rate)\n",
+        "# total_priceに戻ってきた税込金額を表示用の関数へ渡して、その結果を表示する\n",
         "display_total_price(total_price)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 27,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "侍太郎\n"
+          ]
+        }
+      ],
+      "source": [
+        "def show_user_name():\n",
+        "    # ローカル変数を定義する\n",
+        "    user_name = \"侍太郎\"\n",
+        "\n",
+        "    # ローカルスコープの範囲内でローカル変数を使う\n",
+        "    print(user_name)\n",
+        "\n",
+        "show_user_name()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "def show_user_name():\n",
+        "    # ローカル変数を定義する\n",
+        "    user_name = \"侍太郎\"\n",
+        "\n",
+        "    # ローカルスコープの範囲内でローカル変数を使う\n",
+        "    print(user_name)\n",
+        "\n",
+        "show_user_name()\n",
+        "\n",
+        "print(user_name)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 29,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "侍太郎\n",
+            "侍花子\n"
+          ]
+        }
+      ],
+      "source": [
+        "# グローバル変数を定義する\n",
+        "user_name = \"侍花子\"\n",
+        "\n",
+        "def show_user_name():\n",
+        " # ローカル変数を定義する\n",
+        " user_name = \"侍太郎\"\n",
+        "\n",
+        " # ローカルスコープの範囲内でローカル変数を使う\n",
+        " print(user_name)\n",
+        "\n",
+        "show_user_name()\n",
+        "\n",
+        "# グローバルスコープの範囲内でグローバル変数を使う\n",
+        "print(user_name)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# グローバル変数を定義する\n",
+        "user_name = \"侍花子\"\n",
+        "\n",
+        "def show_user_name():\n",
+        " # ローカル変数を定義する\n",
+        " # user_name = \"侍太郎\"\n",
+        "\n",
+        " # ローカルスコープの範囲内でローカル変数を使う\n",
+        "    print(user_name)\n",
+        "\n",
+        "show_user_name()\n",
+        "\n",
+        "# グローバルスコープの範囲内でグローバル変数を使う\n",
+        "print(user_name)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "330.0\n"
+          ]
+        }
+      ],
+      "source": [
+        "# 以下のコードを実行するとスコープに関するエラーが発生します。\n",
+        "# エラーを修正して、正しく計算結果が出力されるようにしてください。\n",
+        "\n",
+        "price1 = 100\n",
+        "price2 = 200\n",
+        "# taxをグローバル変数として定義\n",
+        "tax = 1.1\n",
+        "\n",
+        "def total():\n",
+        "    #　ローカル変数のtaxを使用しない\n",
+        "    # tax = 1.1\n",
+        "    return price1 + price2\n",
+        "\n",
+        "print (total() * tax)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": []
     }
   ],
   "metadata": {
