課題13修正、課題15提出

--- a/Python基礎.ipynb
+++ b/Python基礎.ipynb
@@ -1122,7 +1122,157 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
-      "source": []
+      "source": [
+        "class Product:\n",
+        "    def __init__(self):\n",
+        "        # 属性を定義する\n",
+        "        self.name = \"\"\n",
+        "\n",
+        "shampoo = Product()\n",
+        "\n",
+        "# 属性にアクセスし、値を代入する\n",
+        "shampoo.name = \"シャンプー\"\n",
+        "\n",
+        "# 属性にアクセスし、値を出力する\n",
+        "print(shampoo.name)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 35,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "コーヒー\n"
+          ]
+        }
+      ],
+      "source": [
+        "class Product:\n",
+        "    def __init__(self):\n",
+        "        self.name = \"\"\n",
+        "\n",
+        "    # メソッドを定義する\n",
+        "    def set_name(self, name):\n",
+        "        self.name = name\n",
+        "\n",
+        "    def show_name(self):\n",
+        "        print(self.name)\n",
+        "\n",
+        "# インスタンス化する\n",
+        "coffee = Product()\n",
+        "\n",
+        "# メソッドにアクセスして実行する\n",
+        "coffee.set_name(\"コーヒー\")\n",
+        "coffee.show_name()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 40,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "hirabuki\n"
+          ]
+        }
+      ],
+      "source": [
+        "class User:\n",
+        "    # メソッドを定義する\n",
+        "    def set_name(self, name):\n",
+        "        self.name = name\n",
+        "    \n",
+        "    def show_name(self):\n",
+        "        print(self.name)\n",
+        "\n",
+        "# インスタンス化する\n",
+        "user = User()\n",
+        "\n",
+        "# 属性にアクセスし、値を出力する\n",
+        "user.set_name(\"hirabuki\")\n",
+        "user.show_name()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "class User:\n",
+        "   # コンストラクタを定義する\n",
+        "   def __init__(self, name, age, gender):\n",
+        "     self.name = name\n",
+        "     self.age = age\n",
+        "     self.gender = gender\n",
+        "\n",
+        "   # メソッドを定義する\n",
+        "   '''\n",
+        "   def set_name(self, name):\n",
+        "     self.name = name\n",
+        "\n",
+        "   def show_name(self):\n",
+        "     print(self.name)\n",
+        "   '''\n",
+        "\n",
+        "# インスタンス化する\n",
+        "user = User(\"侍太郎\", 36, \"男性\")\n",
+        "\n",
+        "# 属性にアクセスし、値を出力する\n",
+        "print(user.name)\n",
+        "print(user.age)\n",
+        "print(user.gender)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 42,
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "侍二郎\n",
+            "33\n"
+          ]
+        }
+      ],
+      "source": [
+        "'''\n",
+        "名前(name)と年齢(age)の属性を持つHumanクラスを作成してください。\n",
+        "nameとageを標準出力(print)するメソッド(printinfo)を追加してください。\n",
+        "Humanクラスのインスタンスは、変数に代入してプログラム内で使用してください。\n",
+        "'''\n",
+        "\n",
+        "class Human:\n",
+        "    # コンストラクタを定義する\n",
+        "    def __init__(self, name, age):\n",
+        "        self.name = name\n",
+        "        self.age = age\n",
+        "    \n",
+        "    # メソッドを定義する\n",
+        "    '''def set_attribute(self, name, age):\n",
+        "        self.name = name\n",
+        "        self.age = age\n",
+        "    '''\n",
+        "    def print_info(self):\n",
+        "        print(self.name)\n",
+        "        print(self.age)\n",
+        "\n",
+        "# インスタンス化する\n",
+        "human = Human(\"侍二郎\", 33)\n",
+        "\n",
+        "# メソッドへのアクセス\n",
+        "human.print_info()"
+      ]
     }
   ],
   "metadata": {
