--- a/kadai-013/Python基礎_013.ipynb
+++ b/kadai-013/Python基礎_013.ipynb
@@ -9,7 +9,7 @@
           "name": "stdout",
           "output_type": "stream",
           "text": [
-            "税込 1100.0円になります。\n"
+            "税込 1200.0円になります。\n"
           ]
         }
       ],
@@ -19,7 +19,7 @@
         "\n",
         "# 商品代金priceと税率tax_rateを受け取って、税込金額を計算する\n",
         "def calculate_total_price(price, tax_rate):\n",
-        "    total_price = price + (price * tax_rate)\n",
+        "    total_price = price + (price * tax_rate / 100)\n",
         "    return total_price\n",
         "\n",
         "# 税込金額を丁寧に表示するための関数\n",
@@ -29,9 +29,11 @@
         "# 商品価格をセット\n",
         "price = 1000\n",
         "# 税率をセット\n",
-        "tax_rate = 0.1\n",
+        "tax_rate = 10\n",
+        "\n",
         "# 関数に商品代金と税率を渡して、結果をtotal_priceへ格納\n",
         "total_price = calculate_total_price(price, tax_rate)\n",
+        "\n",
         "# total_priceに戻ってきた税込金額を表示用の関数へ渡して、その結果を表示する\n",
         "display_total_price(total_price)"
       ]
