課題ファイナルupload

--- a/Python基礎.ipynb
+++ b/Python基礎.ipynb
@@ -1233,18 +1233,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 42,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stdout",
-          "output_type": "stream",
-          "text": [
-            "侍二郎\n",
-            "33\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "'''\n",
         "名前(name)と年齢(age)の属性を持つHumanクラスを作成してください。\n",
@@ -1272,6 +1263,185 @@
         "\n",
         "# メソッドへのアクセス\n",
         "human.print_info()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# timeモジュールをインポート\n",
+        "import time\n",
+        "\n",
+        "# 現在時刻をUNIXタイムスタンプで取得\n",
+        "# print(time.time())\n",
+        "\n",
+        "# 現在時刻を日時のフォーマットで取得\n",
+        "print(time.strftime(\"%Y年%m月%d日%H時%M分%S秒\", time.localtime()))\n",
+        "print(time.strftime(\"%Y年%m月%d日\"))\n",
+        "print(time.strftime(\"%Y年%m月%d日%H時%M分%S秒\"))\n",
+        "print(time.strftime(\"%Y年%m月%d日\", time.localtime()))\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# datetimeモジュールをインポート\n",
+        "import datetime\n",
+        "\n",
+        "# 現在の日時を取得する\n",
+        "now = datetime.datetime.now()\n",
+        "print(now)\n",
+        "\n",
+        "# 指定した日付を取得する\n",
+        "date = datetime.datetime.strptime(\"2015-03-19\", \"%Y-%m-%d\")\n",
+        "print(date)\n",
+        "\n",
+        "# 指定した日時を取得する\n",
+        "date_time = datetime.datetime.strptime(\"2015-03-19 12:15:30\", \"%Y-%m-%d %H:%M:%S\")\n",
+        "print(date_time)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# datetimeモジュールをインポート\n",
+        "import datetime\n",
+        "\n",
+        "# 指定した日時を取得する\n",
+        "date_time = datetime.datetime.strptime(\"2015-03-19 12:15:30\", \"%Y-%m-%d %H:%M:%S\")\n",
+        "print(date_time)\n",
+        "\n",
+        "print(date_time.strftime(\"%Y年%m月%d日%H時%M分%S秒\"))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# datetimeモジュールをインポート\n",
+        "import datetime\n",
+        "\n",
+        "# 指定した日時を取得する\n",
+        "date_time = datetime.datetime.strptime(\"2015-03-19 12:15:30\", \"%Y-%m-%d %H:%M:%S\")\n",
+        "\n",
+        "print(date_time)\n",
+        "\n",
+        "# 年,月,日,時,分,秒だけをそれぞれ取り出すことも可能です\n",
+        "print(date_time.year)\n",
+        "print(f\"{date_time.month:02d}\")\n",
+        "print(format(date_time.month, \"02d\"))\n",
+        "print(date_time.day)\n",
+        "print(date_time.hour)\n",
+        "print(date_time.minute)\n",
+        "print(date_time.second)\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# datetimeモジュールをインポート\n",
+        "import datetime\n",
+        "\n",
+        "# 現在時刻を取得\n",
+        "now = datetime.datetime.now()\n",
+        "\n",
+        "str_time = \"2015-03-19 12:15:30\"\n",
+        "\n",
+        "# 指定した日時を取得,文字列をdatetimeオブジェクトへ変換\n",
+        "date_time = datetime.datetime.strptime(\"2015-03-19 12:15:30\", \"%Y-%m-%d %H:%M:%S\")\n",
+        "\n",
+        "# 2つのdatetimeの差を取得し、変数intervalに代入する（interval＝間隔）\n",
+        "interval = now - date_time\n",
+        "# interval = now - str_time\n",
+        "\n",
+        "# 取得した日時の差を特定のフォーマットで出力する\n",
+        "print(f\"総日数は{interval.days}日です。\")\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# datetimeモジュールをインポート\n",
+        "import datetime\n",
+        "\n",
+        "# 現在時刻を取得する\n",
+        "now = datetime.datetime.now()\n",
+        "\n",
+        "# 1年間の日数差を変数td_1yに代入する\n",
+        "td_1y = datetime.timedelta(days=365)\n",
+        "\n",
+        "# 現在の日時に1年を加算し、変数addに代入する\n",
+        "add = now + td_1y\n",
+        "\n",
+        "# 3日間の日数差を変数td_3dに代入する\n",
+        "td_3d = datetime.timedelta(days=3)\n",
+        "\n",
+        "# 現在の日時から3日を減算し、変数subに代入する（sub＝「減算」を意味するsubtractionの略）\n",
+        "sub = now - td_3d\n",
+        "\n",
+        "# 加算・減算した日時を特定のフォーマットで出力する\n",
+        "print(add.strftime(\"現在から1年後は%Y年%m月%d日%H時%M分%S秒です。\"))\n",
+        "print(sub.strftime(\"現在から3日前は%Y年%m月%d日%H時%M分%S秒です。\"))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "'''\n",
+        "名前(name)と年齢(age)の属性を持つHumanクラスを作成してください。\n",
+        "Humanクラスには、以下の条件で標準出力(print)するcheck_adultメソッドを追加してください。\n",
+        "\n",
+        "ageが20以上の場合に大人であること\n",
+        "そうでない場合に大人でないこと\n",
+        "\n",
+        "Humanクラスのインスタンスを複数生成してリストに追加し、リストの要素数分だけcheck_adultメソッドを呼び出してください。\n",
+        "'''\n",
+        "\n",
+        "# Humanクラスを定義\n",
+        "class Human:\n",
+        "    # コンストラクタの定義\n",
+        "    def __init__(self, name, age):\n",
+        "        self.name = name\n",
+        "        self.age = age\n",
+        "\n",
+        "    # 年齢から、大人かどうか判定するメソッドを定義\n",
+        "    def check_adult(self):\n",
+        "        if self.age >= 20:\n",
+        "            print(f\"{self.name}は、20歳以上なので大人です。\")\n",
+        "        else:\n",
+        "            print(f\"{self.name}は、20歳未満なので大人ではありません。\")\n",
+        "\n",
+        "# 複数のインスタンスを作成して、リストへ格納\n",
+        "humans = [\n",
+        "    Human(\"侍一郎\", 30),\n",
+        "    Human(\"侍二郎\", 25),\n",
+        "    Human(\"侍三郎\", 20),\n",
+        "    Human(\"侍四郎\", 15),\n",
+        "    Human(\"侍五郎\", 10)\n",
+        "]\n",
+        "\n",
+        "#　繰り返し構文で、リストからインスタンスを取り出し、check_adultメソッドを呼び出す\n",
+        "for human in humans:\n",
+        "    human.check_adult()"
       ]
     }
   ],
